<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:transitionGroup="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="128dp"
            android:text="@string/textView_WriteFieldFragment_question"
            android:textSize="18dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview_writeField_study"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/textGray">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:text="@string/textView_WriteFieldFragment_study"
                android:textSize="16dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:text="@string/textView_WriterFieldFragment_study_content"
                android:textColor="@color/textGray"
                android:textSize="14dp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview_writeField_contest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/textGray">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:text="@string/textView_WriterFieldFragment_contest"
                android:textSize="16dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:text="@string/textView_WriterFieldFragment_contest_content"
                android:textColor="@color/textGray"
                android:textSize="14dp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardview_writeField_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/textGray">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:text="@string/textView_WriterFieldFragment_project"
                android:textSize="16dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:text="@string/textView_WriterFieldFragment_project_content"
                android:textColor="@color/textGray"
                android:textSize="14dp" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonWriteFieldNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/buttonGray"
        android:text="다음"
        android:textColor="@color/textGray"
        android:textSize="14dp"/>


</LinearLayout>